<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Japanese Traditional Time</string>
    <string name="abbr_app_name">JTT</string>
    <string name="auto_lat_long">Use current location</string>
    <string name="location">Location</string>
    <string name="location_ex">Change stored location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="clock">Clock</string>
    <string name="settings">Settings</string>
    <string name="srv_fail">Service killed</string>
    <string name="srv_fail_ex">Touch to restart the service.</string>
    <string name="bootup">Start on bootup</string>
    <string name="bootup_ex">Start the service automatically when the device is turned on.</string>
    <string name="notify">Display notifications</string>
    <string name="notify_ex">Display current hour glyph in status bar.</string>
    <string name="status">Startup and notifications</string>
    <string name="stop">Stop service</string>
    <string name="stop_ex">Tap to stop service and close application.</string>
    <string name="stop_ask">This will stop service and close the application. The service will be restarted when application is started again.\n\nContinue?</string>
    <string name="today">Today</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="midday">Midday</string>
    <string name="midnight">Midnight</string>
    <string name="day_prev">Yesterday</string>
    <string name="day_curr">Today</string>
    <string name="day_next">Tomorrow</string>
    <string name="hour_names">Hour names</string>

    <string-array name="hour_name_option_names">
        <item>Default</item>
        <item>Romaji</item>
        <item>Hiragana</item>
    </string-array>

    <plurals name="days_past">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="days_future">
        <item quantity="one">In %d day</item>
        <item quantity="other">In %d days</item>
    </plurals>

    <string-array name="hour">
        <item>The Cock</item>
        <item>The Dog</item>
        <item>The Boar</item>
        <item>The Rat</item>
        <item>The Ox</item>
        <item>The Tiger</item>
        <item>The Hare</item>
        <item>The Dragon</item>
        <item>The Serpent</item>
        <item>The Horse</item>
        <item>The Ram</item>
        <item>The Monkey</item>
    </string-array>
    <string-array name="hour_of">
        <item>Hour of the Cock</item>
        <item>Hour of the Dog</item>
        <item>Hour of the Boar</item>
        <item>Hour of the Rat</item>
        <item>Hour of the Ox</item>
        <item>Hour of the Tiger</item>
        <item>Hour of the Hare</item>
        <item>Hour of the Dragon</item>
        <item>Hour of the Serpent</item>
        <item>Hour of the Horse</item>
        <item>Hour of the Ram</item>
        <item>Hour of the Monkey</item>
    </string-array>
    <string-array name="quarter">
        <item>First quarter</item>
        <item>Second quarter</item>
        <item>Third quarter</item>
        <item>Fourth quarter</item>
    </string-array>

    <string name="appearance">Look and feel</string>
    <string name="no_providers">No location providers found. Please enable GPS.</string>
    <string name="widget1">JTT: Single hour</string>
    <string name="widget12">JTT: Clock</string>
    <string name="widget_invert">Invert widget text color</string>
    <string name="widget_invert_ex">Use white text with black border</string>
    <string name="locale">Language</string>
    <string name="locale_default">Default</string>

    <string-array name="theme_names">
        <item>Translucent</item>
        <item>Dark</item>
    </string-array>

    <string name="pref_theme">Theme</string>
</resources>
