<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/status" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="jtt_bootup"
            android:summary="@string/bootup_ex"
            android:title="@string/bootup" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="jtt_notify"
            android:summary="@string/notify_ex"
            android:title="@string/notify" />

        <Preference
            android:key="jtt_stop"
            android:summary="@string/stop_ex"
            android:title="@string/stop" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/location" >

        <com.aragaer.jtt.LocationPreference
            android:defaultValue="0.0:0.0"
            android:key="jtt_loc"
            android:title="@string/location_ex" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/appearance" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="jtt_widget_text_invert"
            android:summary="@string/widget_invert_ex"
            android:title="@string/widget_invert" />

        <ListPreference
            android:defaultValue=""
            android:entries="@array/locales"
            android:entryValues="@array/locales"
            android:key="jtt_locale"
            android:title="@string/locale" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/hour_name_option_names"
            android:entryValues="@array/hour_name_options"
            android:key="jtt_hname"
            android:title="@string/hour_names" />

        <ListPreference
            android:defaultValue="@string/theme_default"
            android:entries="@array/theme_names"
            android:entryValues="@array/themes"
            android:key="jtt_theme"
            android:title="@string/pref_theme" />
    </PreferenceCategory>

</PreferenceScreen>