<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />

    <EditText
        android:id="@+id/lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <EditText
        android:id="@+id/lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal" />

    <Button
        android:id="@+id/auto_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_lat_long"
        style="@android:style/Widget.Button"/>

</LinearLayout>